Setting to ensure consistent sizing and spacing throughout page

--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@
     font-weight: normal;
     font-style: normal;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
